<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonBorrar"
            style="?android:actionButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorButtonOP2"
            android:fontFamily="sans-serif-black"
            android:text="@string/buttonOpBorrar_Text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="241dp" />

        <Button
            android:id="@+id/buttonSigno"
            style="?android:actionButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorButtonOP2"
            android:fontFamily="sans-serif-black"
            android:text="@string/buttonOpSigno_Text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="241dp" />

        <Button
            android:id="@+id/buttonPot"
            style="?android:actionButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorButtonOP2"
            android:fontFamily="sans-serif-black"
            android:text="@string/buttonOpPot_Text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="241dp" />

        <Button
            android:id="@+id/buttonDiv"
            style="?android:actionButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorButtonOP2"
            android:fontFamily="sans-serif-black"
            android:text="@string/buttonOpDiv_Text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="241dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Button
            android:id="@+id/buttonSiete"
            style="?android:actionButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorButtonDig"
            android:fontFamily="sans-serif-black"
            android:text="@string/buttonDigSiete_Text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="241dp" />

        <Button
            android:id="@+id/buttonOcho"
            style="?android:actionButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorButtonDig"
            android:fontFamily="sans-serif-black"
            android:text="@string/buttonDigOcho_Text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="241dp" />

        <Button
            android:id="@+id/buttonNueve"
            style="?android:actionButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorButtonDig"
            android:fontFamily="sans-serif-black"
            android:text="@string/buttonDigNueve_Text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="241dp" />

        <Button
            android:id="@+id/buttonMul"
            style="?android:actionButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorButtonOP1"
            android:fontFamily="sans-serif-black"
            android:text="@string/buttonOpMul_Text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="241dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCuatro"
            style="?android:actionButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorButtonDig"
            android:fontFamily="sans-serif-black"
            android:text="@string/buttonDigCuatro_Text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="241dp" />

        <Button
            android:id="@+id/buttonCinco"
            style="?android:actionButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorButtonDig"
            android:fontFamily="sans-serif-black"
            android:text="@string/buttonDigCinco_Text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="241dp" />

        <Button
            android:id="@+id/buttonSeis"
            style="?android:actionButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorButtonDig"
            android:fontFamily="sans-serif-black"
            android:text="@string/buttonDigSeis_Text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="241dp" />

        <Button
            android:id="@+id/buttonResta"
            style="?android:actionButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorButtonOP1"
            android:fontFamily="sans-serif-black"
            android:text="@string/buttonOpResta_Text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="241dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonUno"
            style="?android:actionButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorButtonDig"
            android:fontFamily="sans-serif-black"
            android:text="@string/buttonDigUno_Text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="241dp" />

        <Button
            android:id="@+id/buttonDos"
            style="?android:actionButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorButtonDig"
            android:fontFamily="sans-serif-black"
            android:text="@string/buttonDigDos_Text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="241dp" />

        <Button
            android:id="@+id/buttonTres"
            style="?android:actionButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorButtonDig"
            android:fontFamily="sans-serif-black"
            android:text="@string/buttonDigTres_Text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="241dp" />

        <Button
            android:id="@+id/buttonSuma"
            style="?android:actionButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorButtonOP1"
            android:fontFamily="sans-serif-black"
            android:text="@string/buttonOpSuma_Text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="241dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCero"
            style="?android:actionButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/colorButtonDig"
            android:fontFamily="sans-serif-black"
            android:text="@string/buttonDigCero_Text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="241dp" />

        <Button
            android:id="@+id/buttonPunto"
            style="?android:actionButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorButtonDig"
            android:fontFamily="sans-serif-black"
            android:text="@string/buttonDigPunto_Text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="241dp" />

        <Button
            android:id="@+id/buttonIgual"
            style="?android:actionButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorButtonOP1"
            android:fontFamily="sans-serif-black"
            android:text="@string/buttonOpIgual_Text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="241dp" />
    </LinearLayout>

</LinearLayout>